# nix-vendor

./: .gitignore  README.md  debug.py  flake.nix  pyproject.toml  vendor.nix
nix/: package.nix  repl.nix
src/nix_vendor/: __init__.py  _process.py  nix.py  schema.py  schema_test.py  vendoring.py
