[project]
name = "nix-vendor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "fence", email = "fence@desu-mail.moe" }
]
license ="EUPL-1.2"
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "pydantic>=2.11.7",
    "rich>=14.1.0",
]

[project.scripts]
nix-vendor = "nix_vendor:cli"

#[build-system]
#requires = ["uv_build>=0.9.26,<0.10.0"]
#build-backend = "uv_build"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
